syntax = "proto3";
package v1.api.identity;

import "models.proto";

service IdentityService {
  rpc GetIdentity(GetIdentityRequest) returns (GetIdentityResponse) {}
  rpc CreateIdentity(CreateIdentityRequest) returns (CreateIdentityResponse) {}
  rpc UpdateIdentity(UpdateIdentityRequest) returns (UpdateIdentityResponse) {}
  rpc DeleteIdentity(DeleteIdentityRequest) returns (DeleteIdentityResponse) {}
  rpc ListIdentities(ListIdentitiesRequest) returns (ListIdentitiesResponse) {}
}

// GetIdentity
message GetIdentityRequest { string id = 1; }
message GetIdentityResponse { models.Identity identity = 1; }

// CreateIdentity
message CreateIdentityRequest { models.Identity identity = 1; }
message CreateIdentityResponse { models.Identity identity = 1; }

// UpdateIdentity
message UpdateIdentityRequest { models.Identity identity = 1; }
message UpdateIdentityResponse { models.Identity identity = 1; }

// DeleteIdentity
message DeleteIdentityRequest { string id = 1; }
message DeleteIdentityResponse { models.Identity identity = 1; }

// ListIdentities
message ListIdentitiesRequest {
  int32 page_size = 1;
  string page_token = 2;
}
message ListIdentitiesResponse {
  repeated models.Identity identities = 1;
  string next_page_token = 2;
}
